# donraulava

./: .gitignore  BaseDialog.h  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  ConfigDialog.cpp  ConfigDialog.h  DesktopDuplicateCapture.cpp  DesktopDuplicateCapture.h  DetectLoop.cpp  DetectLoop.h  Donation.txt  LICENSE.txt  NaiveTracker.h  README.md  SECURITY.md  ScreenCapture.h  WinApiScreenCapture.cpp  WinApiScreenCapture.h  cv_utility.cpp  cv_utility.h  cv_utils.cpp  cv_utils.h  dep.txt  donRaulAva.cpp  donRaulAva.h  resource.h  resource.rc  utils.cpp  utils.h
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: project.yml
